Added possible background images.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body background="/backgrounds/musicRoomBackground1.jpg">
 <h1>Pick Your Poison</h1>
-<p>I'm hosted with GitHub Pages, I think?</p>
+<p>Simple Project: Create an Interactive Story Website</p>
 </body>
 </html>
